--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
-<div class="row">
+<div class="container">
+  <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <app-trainings-list></app-trainings-list>
+    <router-outlet></router-outlet>
   </div>
-</div>
+</div></div>
+
