--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,9 +3,11 @@
     <div class="navbar-header">
       <a href="#" class="navbar-brand">My Training Tracker</a>
     </div>
+
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Trainings</a></li>
+        <li routerLinkActive="my_active"><a routerLink="/trainings">Trainings</a></li>
+        <li routerLinkActive="my_active"><a routerLink="/add-training">Add a training</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
