--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -8,5 +8,6 @@
 }
 
 .my_active {
-  outline: rgba(255, 255, 255, 0.5) 1px solid;
+  outline: rgba(255, 255, 255, 0.2) 1px solid;
+  background: rgba(255, 255, 255, 0.2);
 }
