--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="my_active"><a routerLink="/trainings">Trainings</a></li>
-        <li routerLinkActive="my_active"><a routerLink="/add-training">Add a training</a></li>
+        <li routerLinkActive="my_active"><a routerLink="/add-training">Add a Training</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
