--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: linear-gradient(90deg, rgba(255,69,0,0.5) 0%, rgba(137,14,10,0.5) 69%, rgba(139,0,139,0.5) 100%);
+}
+
