--- a/src/app/add-training/add-training.component.html
+++ b/src/app/add-training/add-training.component.html
@@ -1,5 +1,37 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn add-btn">Add Training</button>
+    <form (ngSubmit)="onAddTraining(f)" #f="ngForm">
+      <div class="row">
+        <div class="col-sm-5 form-group">
+          <label for="type">Type of exercise: </label>
+          <input type="text"
+                 id="type"
+                 class="form-control"
+                 name="type"
+                 ngModel
+          >
+        </div>
+        <div class="col-sm-5 form-group">
+          <label for="duration">Duration (minutes): </label>
+          <input type="number"
+                 id="duration"
+                 class="form-control"
+                 name="duration"
+                 ngModel
+          >
+        </div>
+        <div class="col-sm-5 form-group">
+          <label for="date">Date: </label>
+          <input type="date"
+                 id="date"
+                 class="form-control"
+                 name="date"
+                 ngModel>
+        </div>
+        <div class="col-sm-5 form-group">
+          <button class="btn add-btn">Add Training</button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
