--- a/src/app/add-training/add-training.component.html
+++ b/src/app/add-training/add-training.component.html
@@ -9,6 +9,7 @@
                  class="form-control"
                  name="type"
                  ngModel
+                 required
           >
         </div>
         <div class="col-sm-5 form-group">
@@ -18,6 +19,7 @@
                  class="form-control"
                  name="duration"
                  ngModel
+                 required
           >
         </div>
         <div class="col-sm-5 form-group">
@@ -29,7 +31,7 @@
                  ngModel>
         </div>
         <div class="col-sm-5 form-group">
-          <button class="btn add-btn">Add Training</button>
+          <button class="btn add-btn" type="submit" [disabled]="!f.valid">Add Training</button>
         </div>
       </div>
     </form>
