--- a/src/app/trainings-list/training-list-item/training-list-item.component.html
+++ b/src/app/trainings-list/training-list-item/training-list-item.component.html
@@ -1,11 +1,11 @@
-<a
-  href="#"
+<div
   class="list-group-item clearfix">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{training.type}}</h4>
-    <p class="list-group-item-text">{{training.duration}}</p>
+    <p class="list-group-item-text">{{training.duration}} minutes</p>
   </div>
   <div class="pull-right">
     <p class="list-group-item-text" >{{training.date}}</p>
+
   </div>
-</a>
+</div>
