enabled delete button

--- a/src/app/trainings-list/training-list-item/training-list-item.component.html
+++ b/src/app/trainings-list/training-list-item/training-list-item.component.html
@@ -6,6 +6,8 @@
   </div>
   <div class="pull-right">
     <p class="list-group-item-text" >{{training.date}}</p>
-
+    <button
+      class="list-group-item-danger btn"
+      (click)="onDelete()">Delete</button>
   </div>
 </div>
