--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,7 @@
     <ul class="nav navbar-nav">
       <li routerLinkActive="my_active"><a routerLink="/trainings">Trainings</a></li>
       <li routerLinkActive="my_active"><a routerLink="/add-training">Add Training</a></li>
+      <li routerLinkActive="my_active"><a routerLink="/auth">Authenticate</a></li>
     </ul>
-  </div>
+    </div>
 </nav>
