--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,10 +3,10 @@
     <div class="navbar-header">
       <a href="#" class="navbar-brand">My Training Tracker</a>
     </div>
-
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav navbar-left">
       <li routerLinkActive="my_active"><a routerLink="/trainings">Trainings</a></li>
-      <li routerLinkActive="my_active"><a routerLink="/add-training">Add Training</a></li>
+      <li routerLinkActive="my_active"><a routerLink="/add-training">Add Training</a></li></ul>
+    <ul class="nav navbar-nav navbar-right">
       <li routerLinkActive="my_active"><a routerLink="/auth">Authenticate</a></li>
     </ul>
     </div>
