--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default header">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">My Training Tracker</a>
+      <a routerLink="/trainings" class="navbar-brand">My Training Tracker</a>
     </div>
     <ul class="nav navbar-nav navbar-left">
       <li routerLinkActive="my_active"  *ngIf="isAuthenticated"><a routerLink="/trainings">Trainings</a></li>
